--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: structured-package
-        path: release
+        path: build/package
 
   release:
     name: Release
@@ -54,7 +54,7 @@ jobs:
     - name: Archive package
       run: |
         version="${GITHUB_REF#refs/tags/}"
-        tar -czf CleanerCS2-${version}.tar.gz -C release .
+        tar -czf CleanerCS2-${version}.tar.gz -C build/package .
 
     - name: Upload release archive
       uses: svenstaro/upload-release-action@v2
